overlap fix modif profil

--- a/html/cdn/main.css
+++ b/html/cdn/main.css
@@ -93,11 +93,6 @@ ul>li {
     font-weight: 500;
 }
 
-.bottom {
-    position: absolute;
-    bottom: 0;
-}
-
 .noMI {
     margin: 0 !important;
 }
